gitops/components/services/core/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
